[project]
name = "homework-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.20",
    "gradio>=4.44.1",
    "jupyter>=1.1.1",
    "llama-index>=0.13.5",
    "llama-index-embeddings-huggingface>=0.6.0",
    "llama-index-llms-ollama>=0.7.1",
    "llama-index-vector-stores-chroma>=0.5.2",
    "ollama>=0.5.3",
    "sentence-transformers>=5.1.0",
]
